# alignment-experiments

./: .gitignore  AGENTS.md  pyproject.toml
model-organisms-emergent-misalignment/: AGENTS.md  LoRA.ipynb  README.md  data.ipynb  data.py  generate.ipynb  lora_model.py  modal_app.py  model.ipynb  qwen_config.ipynb  train_lora.py
model-organisms-emergent-misalignment/training_configs/: test_config.json
towards-understanding-sycophancy/: README.md
towards-understanding-sycophancy/3_1_biased_feedback/: README.md  experiments.ipynb
towards-understanding-sycophancy/3_1_biased_feedback/datasets/: arguments_v1.jsonl  math_v1.jsonl  poems_v1.jsonl
towards-understanding-sycophancy/3_1_biased_feedback/evals/: arguments_v1.py  math_v1.py  poems_v1.py
towards-understanding-sycophancy/3_1_biased_feedback/scripts/: build_arguments_v1.py  build_overall_report.py  build_poems_v1.py  build_report.py  extract_arguments_v1_baselines.py  extract_arguments_v1_biased_responses.py  extract_math_v1_baselines.py  extract_math_v1_biased_responses.py  extract_poems_v1_baselines.py  extract_poems_v1_biased_responses.py
towards-understanding-sycophancy/swaying/: README.md
towards-understanding-sycophancy/swaying/datasets/: swaying_v1.jsonl
towards-understanding-sycophancy/swaying/evals/: swaying_v1.py
towards-understanding-sycophancy/swaying/scripts/: build_swaying_report.py  build_swaying_v1.py
