[project]
name = "alignment-experiments"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "datasets",
    "ipykernel",
    "inspect-ai",
    "jupyterlab",
    "openai",
    "python-dotenv",
    "transformers>=5.12.0",
    "modal>=1.5.0",
    "torch>=2.12.0",
    "matplotlib>=3.11.0",
    "tensorboard>=2.20.0",
]
